--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/hyunjiLeeTech/URL-FI/issues"
   },
-  "homepage": "https://github.com/hyunjiLeeTech/URL-FI#readme"
+  "homepage": "https://github.com/hyunjiLeeTech/URL-FI#readme",
+  "dependencies": {
+    "request": "^2.88.2"
+  }
 }
