--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/hyunjiLeeTech/URL-FI#readme",
   "dependencies": {
     "colors": "^1.4.0",
+    "path": "^0.12.7",
     "request": "^2.88.2"
   }
 }
