--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "bin": "./index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier": "prettier --write *",
+    "prettier-check": "prettier --check *"
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,8 @@
     "colors": "^1.4.0",
     "path": "^0.12.7",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "prettier": "2.1.2"
   }
 }
