--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "bin": "./index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prettier": "prettier --write *",
     "prettier-check": "prettier --check *",
     "eslint": "eslint --ignore-path .eslintignore *"
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "eslint": "^7.13.0",
+    "jest": "^26.6.3",
     "prettier": "2.1.2"
   }
 }
