--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "bin": "./index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "prettier": "prettier --write *",
     "prettier-check": "prettier --check *",
     "eslint": "eslint --ignore-path .eslintignore *"
